<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/client_list_header_dark_grey"
    android:orientation="horizontal"
    android:weightSum="10">


    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/child_header"
        style="@style/CustomFontTextViewStyle.ClientList.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:text="@string/patient_profile"
        android:textAllCaps="true"
        android:textColor="@color/client_list_grey"
        android:textSize="16sp" />


    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/child_age_header"
        style="@style/CustomFontTextViewStyle.ClientList.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="7dp"
        android:layout_weight="3.5"
        android:text="@string/results"
        android:textAllCaps="true"
        android:textColor="@color/client_list_grey"
        android:textSize="16sp" />


    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/child_due_header"
        style="@style/CustomFontTextViewStyle.ClientList.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_weight="2.5"
        android:text="@string/diagnose"
        android:textAllCaps="true"
        android:textColor="@color/client_list_grey"
        android:textSize="16sp" />
</LinearLayout>
