<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register_headers"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/client_list_header_dark_grey"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <include layout="@layout/register_list_header" />

    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/results_header"
        style="@style/CustomFontTextViewStyle.ClientList.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="7dp"
        android:layout_weight="3.4"
        android:gravity="center_horizontal"
        android:text="@string/results"
        android:textAllCaps="true"
        android:textColor="@color/client_list_grey"
        android:textSize="16sp" />

    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/treat_header"
        style="@style/CustomFontTextViewStyle.ClientList.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_weight="2.6"
        android:gravity="center_horizontal"
        android:text="@string/treat"
        android:textAllCaps="true"
        android:textColor="@color/client_list_grey"
        android:textSize="16sp" />

    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/diagnosis_header"
        style="@style/CustomFontTextViewStyle.ClientList.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_weight="2.6"
        android:gravity="center_horizontal"
        android:text="@string/diagnosis"
        android:textAllCaps="true"
        android:textColor="@color/client_list_grey"
        android:textSize="16sp"
        android:visibility="gone" />

</LinearLayout>
