<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="120dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/content_intreatment_patient_detail_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/cardview_patient_details"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:layout_gravity="center">

            <Button
                android:id="@+id/home_visit_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:adjustViewBounds="true"
                android:background="@drawable/due_vaccine_blue_bg"
                android:gravity="center_vertical"
                android:hapticFeedbackEnabled="true"
                android:padding="15dp"
                android:backgroundTint="#46c25e"
                android:textColor="@android:color/black"
                android:layout_marginRight="6sp"
                android:textAlignment="center"
                android:text="@string/start_home_visit"
                android:textSize="15sp" />

            <Button
                android:id="@+id/register_indicator_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:textAlignment="center"
                android:adjustViewBounds="true"
                android:background="@drawable/due_vaccine_blue_bg"
                android:gravity="center_vertical"
                android:hapticFeedbackEnabled="true"
                android:backgroundTint="#46c25e"
                android:textColor="@android:color/black"
                android:layout_marginLeft="6sp"
                android:padding="15dp"
                android:text="@string/register_child_indicator"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="right">

            <org.smartregister.view.customcontrols.CustomFontTextView
                style="@style/CustomFontTextViewStyle.ClientList.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recorded_on"
                android:textColor="@color/client_list_grey"
                android:textSize="18sp"/>

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/date_last_recorded"
                style="@style/CustomFontTextViewStyle.ClientList.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textColor="@color/client_list_grey"
                android:textSize="18sp" />

        </LinearLayout>

        <include layout="@layout/cardview_followup" />

        <include layout="@layout/cardview_visits_dates" />

        <include
            android:id="@+id/illness_card"
            layout="@layout/cardview_illness" />

        <!--

        <include layout="@layout/cardview_bmi_height_chart" />

        <include layout="@layout/cardview_contact_screening" /> -->

    </LinearLayout>


</FrameLayout>
